--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body data-rsssl="1">
-<nav>
+<nav></nav>
 
   <main>
     <video id="video" autoplay style="visibility: hidden"></video>
@@ -58,6 +58,9 @@
   <button class="floating-button right" onclick="reloadPage()">🔄</button>
   <button id="viewDetailsButton" class="floating-button" style="display: none;" onclick="viewDetails()">View More Details</button>
 
+  <div id="va-container">
+    <canvas id="va-canvas"></canvas>
+  </div>
   <script>
     // Initialize video and canvas elements
     const video = document.getElementById("video");
@@ -215,7 +218,12 @@
     //     });
     // }
   </script>
-
+  <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
+  <script src="./res/js/VA.js"></script>
+  <script src="./res/js/speakClient.js"></script>
   <script src="./res/js/scripts.js"></script>
 </body>
 </html>
