--- a/homepage.html
+++ b/homepage.html
@@ -1,230 +1,250 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Homepage</title>
-  <link rel="stylesheet" href="./res/css/styles.css" />
-  <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
-  <link href="./assets/img/favicon.png" rel="icon" />
-  <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-  />
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-  />
-  <script
-          src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
-          integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer"
-  ></script>
-  <script src="./res/js/jsQR.js"></script>
-  <script src="./res/js/aframe.min.js"></script>
-  <script src="./res/js/aframe-ar.js"></script>
-  <script src="./res/js/aframe-text-geometry-component.min.js"></script>
-  <link
-          href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-          rel="stylesheet"
-  />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<body data-rsssl="1">
-<nav></nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Homepage</title>
+    <link rel="stylesheet" href="./res/css/styles.css" />
+    <link rel="icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <link href="./assets/img/favicon.png" rel="icon" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
+      integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="./res/js/jsQR.js"></script>
+    <script src="./res/js/aframe.min.js"></script>
+    <script src="./res/js/aframe-ar.js"></script>
+    <script src="./res/js/aframe-text-geometry-component.min.js"></script>
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body data-rsssl="1">
+    <nav></nav>
 
-  <main>
-    <video id="video" autoplay style="visibility: hidden"></video>
-    <canvas id="canvas" style="visibility: hidden"></canvas>
+    <main>
+      <video id="video" autoplay style="visibility: hidden"></video>
+      <canvas id="canvas" style="visibility: hidden"></canvas>
 
-    <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
-      <a-assets>
-        <a-asset-item
-                id="exoFont"
-                src="./assets/fonts/exoBlack.typeface.json"
-        ></a-asset-item>
-      </a-assets>
+      <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
+        <a-assets>
+          <a-asset-item
+            id="exoFont"
+            src="./assets/fonts/exoBlack.typeface.json"
+          ></a-asset-item>
+        </a-assets>
 
-      <!-- Text Box Background -->
-      <a-plane id="textBox"></a-plane>
-      <!-- Main Text -->
-      <a-text id="text"></a-text>
-    </a-scene>
-  </main>
+        <!-- Text Box Background -->
+        <a-plane id="textBox"></a-plane>
+        <!-- Main Text -->
+        <a-text id="text"></a-text>
+      </a-scene>
+    </main>
 
-  <!-- Floating Buttons -->
-  <button class="floating-button left" onclick="viewDetails()">i</button>
-  <button id="viewDetailsButton" class="floating-button" style="display: none;" onclick="viewDetailsButton()">View More Details</button>
-  <button class="floating-button right" onclick="reloadPage()">
-    <img src="assets/img/reload.png" alt="Reload" style="width: 20px; height: 20px;">
-  </button>
+    <!-- Floating Buttons -->
+    <button class="floating-button left" onclick="viewDetails()">i</button>
+    <button
+      id="watchVideosButton"
+      class="floating-button"
+      style="display: none"
+      onclick="watchVideos()"
+    >
+      Watch Videos
+    </button>
+    <button class="floating-button right" onclick="reloadPage()">
+      <img
+        src="assets/img/reload.png"
+        alt="Reload"
+        style="width: 20px; height: 20px"
+      />
+    </button>
 
-  <div id="va-container">
-    <canvas id="va-canvas"></canvas>
-  </div>
-  <script>
-    // Initialize video and canvas elements
-    const video = document.getElementById("video");
-    const canvas = document.getElementById("canvas");
-    const canvasContext = canvas.getContext("2d");
-    const text = document.getElementById("text");
-    const textBox = document.getElementById("textBox");
-    let currentCodeData = null;
-    let artifactInfo = "";
+    <div id="va-container">
+      <canvas id="va-canvas"></canvas>
+    </div>
 
-    // Start scanning when the page loads
-    startScanning();
+    <script>
+      // Initialize video and canvas elements
+      const video = document.getElementById("video");
+      const canvas = document.getElementById("canvas");
+      const canvasContext = canvas.getContext("2d");
+      const text = document.getElementById("text");
+      const textBox = document.getElementById("textBox");
+      let currentCodeData = null;
+      let artifactInfo = "";
 
-    // Function to start the camera and scan QR codes
-    function startScanning() {
-      // Access the camera
-      navigator.mediaDevices
-              .getUserMedia({
-                video: {
-                  facingMode: "environment",
-                },
-              })
-              .then((stream) => {
-                video.srcObject = stream;
-                video.setAttribute("playsinline", true); // For iOS compatibility
-                video.play();
-                requestAnimationFrame(scanQRCode);
-              })
-              .catch((err) => console.error("Camera access error:", err));
-    }
+      // Start scanning when the page loads
+      startScanning();
 
-    // Function to scan QR codes
-    function scanQRCode() {
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-        const imageData = canvasContext.getImageData(0, 0, canvas.width, canvas.height);
-        const code = jsQR(imageData.data, canvas.width, canvas.height);
-
-        onQRCodeDetected(code);
+      // Function to start the camera and scan QR codes
+      function startScanning() {
+        // Access the camera
+        navigator.mediaDevices
+          .getUserMedia({
+            video: {
+              facingMode: "environment",
+            },
+          })
+          .then((stream) => {
+            video.srcObject = stream;
+            video.setAttribute("playsinline", true); // For iOS compatibility
+            video.play();
+            requestAnimationFrame(scanQRCode);
+          })
+          .catch((err) => console.error("Camera access error:", err));
       }
-      // Continue scanning
-      requestAnimationFrame(scanQRCode);
-    }
 
-    // When QR code is detected
-    function onQRCodeDetected(code) {
-      if (code) {
-        const artifactId = code.data;
+      // Function to scan QR codes
+      function scanQRCode() {
+        if (video.readyState === video.HAVE_ENOUGH_DATA) {
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+          canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-        // Check if the detected QR code is different from the current one
-        if (artifactId !== currentCodeData) {
-          // Update the current QR code data
-          currentCodeData = artifactId;
+          const imageData = canvasContext.getImageData(
+            0,
+            0,
+            canvas.width,
+            canvas.height
+          );
+          const code = jsQR(imageData.data, canvas.width, canvas.height);
 
-          // Set text box properties
-          textBox.setAttribute("color", "white");
-          textBox.setAttribute("opacity", "0.8");
-          textBox.setAttribute("width", "6");
-          textBox.setAttribute("height", "4");
-          textBox.setAttribute("position", "0 1 -10.5");
-          textBox.setAttribute("visible", "true");
-
-          // Set the text properties
-          text.setAttribute("font", "./assets/fonts/Exo2Bold.fnt");
-          text.setAttribute("color", "black");
-          text.setAttribute("rotation", "0 0 0");
-          text.setAttribute("position", "0 1.6 -10");
-          text.setAttribute("align", "center");
-          text.setAttribute("width", "5");
-          text.setAttribute("wrap-count", "30");
-
-          // Set the text value
-          switch (artifactId) {
-            case "1":
-              text.setAttribute(
-                      "value",
-                      `Artifact Id: 1\nSection Name: Wood arts\nCatalogue Name: Traditional wood arts\nName: House door\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
-              );
-              break;
-            case "2":
-              text.setAttribute(
-                      "value",
-                      `Artifact Id: 2\nSection Name: Wood arts\nCatalogue Name: Contemporary wood arts\nName: Panel wall\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
-              );
-              break;
-            case "3":
-              text.setAttribute(
-                      "value",
-                      `Artifact Id: THREE\nSection Name: Musical instruments\nCatalogue Name: Gongs and drums\nName: Gong handle 1\nDescription: With back-to-back anthropomorphic motif\nCondition: No problem.\n`
-              );
-              break;
-            default:
-              text.setAttribute(
-                      "value",
-                      "Whoops! We couldn't fetch the artifact details. Please try again!"
-              );
-              text.setAttribute("color", "red");
-              break;
-          }
-
-          // Show the view details button
-          document.getElementById("viewDetailsButton").style.display = "block";
-
-          fetchArtifactInfo(artifactId);
+          onQRCodeDetected(code);
         }
-      } else {
-        // QR code not detected, reset or clear the display
-        currentCodeData = null;
-        textBox.setAttribute("visible", "false");
-        text.setAttribute("value", ""); // Clear text
-
-        // Hide the view details button
-        document.getElementById("viewDetailsButton").style.display = "none";
+        // Continue scanning
+        requestAnimationFrame(scanQRCode);
       }
-    }
 
-    function viewDetails() {
-      alert("Welcome! This is a QR code scanning application designed to provide you with more information about the museum artifacts. \nTo use it, simply position your phone's camera in front of the QR codes located near the artifacts. \nThe app will automatically detect the codes and display detailed information about each artifact.");
-    }
+      // When QR code is detected
+      function onQRCodeDetected(code) {
+        if (code) {
+          const artifactId = code.data;
 
-    function viewDetailsButton(){
-      
-    }
+          // Check if the detected QR code is different from the current one
+          if (artifactId !== currentCodeData) {
+            // Update the current QR code data
+            currentCodeData = artifactId;
 
-    // Query the artifact information from the database
-    // function fetchArtifactInfo(artifactId) {
-    //   fetch(`getArtifact.php?artifact_id=${artifactId}`)
-    //     .then((response) => response.json())
-    //     .then((data) => {
-    //       if (data) {
-    //         console.log("Data:");
-    //         console.log(data);
-    //         artifactInfo = `
-    //                 Artifact Id: ${data.artifact_id}
-    //                 Section Name: ${data.section_name}
-    //                 Catalogue Name: ${data.catalogue_name}
-    //                 Name: ${data.name}
-    //                 Description: ${data.description}
-    //                 Condition: ${data.condition}
-    //         `.trim();
-    //       } else {
-    //         artifactInfo = "Artifact not found";
-    //       }
+            // Set text box properties
+            textBox.setAttribute("color", "white");
+            textBox.setAttribute("opacity", "0.8");
+            textBox.setAttribute("width", "6");
+            textBox.setAttribute("height", "4");
+            textBox.setAttribute("position", "0 1 -10.5");
+            textBox.setAttribute("visible", "true");
 
-    //       text.setAttribute("value", artifactInfo);
-    //     })
-    //     .catch((error) => {
-    //       console.error("Error fetching artifact info:", error);
-    //       artifactInfo = "Error fetching artifact info";
-    //       text.setAttribute("value", artifactInfo);
-    //     });
-    // }
-  </script>
-  <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
-  <script src="./res/js/VA.js"></script>
-  <script src="./res/js/speakClient.js"></script>
-  <script src="./res/js/scripts.js"></script>
-</body>
+            // Set the text properties
+            text.setAttribute("font", "./assets/fonts/Exo2Bold.fnt");
+            text.setAttribute("color", "black");
+            text.setAttribute("rotation", "0 0 0");
+            text.setAttribute("position", "0 1.6 -10");
+            text.setAttribute("align", "center");
+            text.setAttribute("width", "5");
+            text.setAttribute("wrap-count", "30");
+
+            // Set the text value
+            switch (artifactId) {
+              case "1":
+                text.setAttribute(
+                  "value",
+                  `Artifact Id: 1\nSection Name: Wood arts\nCatalogue Name: Traditional wood arts\nName: House door\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
+                );
+                break;
+              case "2":
+                text.setAttribute(
+                  "value",
+                  `Artifact Id: 2\nSection Name: Wood arts\nCatalogue Name: Contemporary wood arts\nName: Panel wall\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
+                );
+                break;
+              case "3":
+                text.setAttribute(
+                  "value",
+                  `Artifact Id: THREE\nSection Name: Musical instruments\nCatalogue Name: Gongs and drums\nName: Gong handle 1\nDescription: With back-to-back anthropomorphic motif\nCondition: No problem.\n`
+                );
+                break;
+              default:
+                text.setAttribute(
+                  "value",
+                  "Whoops! We couldn't fetch the artifact details. Please try again!"
+                );
+                text.setAttribute("color", "red");
+                break;
+            }
+
+            // Show the view details button
+            document.getElementById("watchVideosButton").style.display =
+              "block";
+
+            fetchArtifactInfo(artifactId);
+          }
+        } else {
+          // QR code not detected, reset or clear the display
+          currentCodeData = null;
+          textBox.setAttribute("visible", "false");
+          text.setAttribute("value", ""); // Clear text
+
+          // Hide the view details button
+          document.getElementById("watchVideosButton").style.display = "none";
+        }
+      }
+
+      function viewDetails() {
+        alert(
+          "Welcome! \nThis is a QR code scanning application designed to provide you with more information about the museum artifacts. \nTo use it, simply position your phone's camera in front of the QR codes located near the artifacts. \nThe app will automatically detect the codes and display detailed information about each artifact."
+        );
+      }
+
+      function watchVideos() {
+        window.location.href = "igorot-dances.html";
+      }
+
+      // Query the artifact information from the database
+      // function fetchArtifactInfo(artifactId) {
+      //   fetch(`getArtifact.php?artifact_id=${artifactId}`)
+      //     .then((response) => response.json())
+      //     .then((data) => {
+      //       if (data) {
+      //         console.log("Data:");
+      //         console.log(data);
+      //         artifactInfo = `
+      //                 Artifact Id: ${data.artifact_id}
+      //                 Section Name: ${data.section_name}
+      //                 Catalogue Name: ${data.catalogue_name}
+      //                 Name: ${data.name}
+      //                 Description: ${data.description}
+      //                 Condition: ${data.condition}
+      //         `.trim();
+      //       } else {
+      //         artifactInfo = "Artifact not found";
+      //       }
+
+      //       text.setAttribute("value", artifactInfo);
+      //     })
+      //     .catch((error) => {
+      //       console.error("Error fetching artifact info:", error);
+      //       artifactInfo = "Error fetching artifact info";
+      //       text.setAttribute("value", artifactInfo);
+      //     });
+      // }
+    </script>
+    <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
+    <script src="./res/js/VA.js"></script>
+    <script src="./res/js/speakClient.js"></script>
+    <script src="./res/js/scripts.js"></script>
+  </body>
 </html>
