--- a/homepage.html
+++ b/homepage.html
@@ -40,10 +40,8 @@
 
       <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
         <a-assets>
-          <a-asset-item
-            id="exoFont"
-            src="./assets/fonts/exoBlack.typeface.json"
-          ></a-asset-item>
+          <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
+          <img id="pixels" src="./assets/img/pixels.png" />
         </a-assets>
 
         <!-- Text Box Background -->
@@ -53,6 +51,9 @@
         <a-box id="cube"></a-box>
       </a-scene>
     </main>
+    <div id="va-container">
+      <canvas id="va-canvas"></canvas>
+    </div>
 
     <!-- Floating Buttons -->
     <button class="floating-button left" onclick="viewDetails()">i</button>
@@ -72,9 +73,7 @@
       />
     </button>
 
-    <div id="va-container">
-      <canvas id="va-canvas"></canvas>
-    </div>
+
 
     <script>
       // Initialize video and canvas elements
@@ -114,12 +113,7 @@
           canvas.height = video.videoHeight;
           canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-          const imageData = canvasContext.getImageData(
-            0,
-            0,
-            canvas.width,
-            canvas.height
-          );
+          const imageData = canvasContext.getImageData(0, 0, canvas.width, canvas.height);
           const code = jsQR(imageData.data, canvas.width, canvas.height);
 
           onQRCodeDetected(code);
@@ -248,13 +242,14 @@
       //     });
       // }
     </script>
-    <!-- <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+
+     <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dylanNew/live2d/webgl/Live2D/lib/live2d.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
     <script src="./res/js/VA.js"></script>
     <script src="./res/js/speakClient.js"></script>
-    <script src="./res/js/scripts.js"></script> -->
+    <script src="./res/js/scripts.js"></script>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
   </body>
