--- a/guest-login.html
+++ b/guest-login.html
@@ -26,30 +26,30 @@
         ></a>
       </div>
       <div class="access-container">
-        <form>
+        <form id="guest-form">
           <div id="general-form">
             <div class="input-container">
-              <p
-                style="text-align: left; font-weight: lighter; font-size: 16px"
-              >
+              <p style="text-align: left; font-weight: lighter; font-size: 16px" >
                 Name
               </p>
               <input
-                type="text"
-                class="input-field"
-                placeholder="First and last name"
+                      type="text"
+                      id="user_name"
+                      class="input-field"
+                      placeholder="First and last name"
+                      required
               />
             </div>
             <div class="input-container">
-              <p
-                style="text-align: left; font-weight: lighter; font-size: 16px"
-              >
+              <p style="text-align: left; font-weight: lighter; font-size: 16px">
                 School/ Organization
               </p>
               <input
-                type="text"
-                class="input-field"
-                placeholder="School or organization"
+                      type="text"
+                      id="user_school"
+                      class="input-field"
+                      placeholder="School or organization"
+                      required
               />
             </div>
           </div>
